# virtual-warehouse

./: .cirrus.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  main.py  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt  virtual-warehouse.pyproject
.github/workflows/: python-publish.yml
data/: agent_data.csv  complex_orders_v1.xlsx  complex_orders_v2.xlsx  warehouse_data_v2.xlsx  warehouse_no_1.xlsx  warehouse_no_1_v2.xlsx  warehouse_w_complex_v2.xlsx
doc/: README.md  input_description.md
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/_templates/autosummary/: class.rst
docs/source/development/: index.rst
docs/source/getting_started/: index.rst
docs/source/reference/: data.rst  index.rst  parser.rst  view_controller.rst
docs/source/reference/api/: virtual_warehouse.parser.data_model.Coord.rst  virtual_warehouse.parser.data_model.Inventory.rst  virtual_warehouse.parser.data_model.Item.rst  virtual_warehouse.parser.data_model.ItemUnit.rst  virtual_warehouse.parser.data_model.Location.rst  virtual_warehouse.parser.data_model.Order.rst  virtual_warehouse.parser.excel_parser.rst  virtual_warehouse.parser.utils.rst
docs/source/user_guide/: data_format.rst  index.rst  user_interface.rst
src/: environment.py  heatmap.py  location_models.py  main.py  main.qrc  main_rc.py  tab_controller.py  test.py  view_controller.py
src/assets/: warehouse_data_v2.xlsx
src/parser/: data_model.py  excel_parser.py  utils.py
src/resources/qml/: CustomItem.qml  LocationListView.qml  MapView2D.qml  OrderListView.qml  customItem.qml  main.qml
virtual_warehouse/: __init__.py  __main__.py  app.py  environment.py  heatmap.py  location_models.py  location_utils.py  main.qrc  main_rc.py  map.py  ontology.py  plugin.py  qtquickcontrols2.conf  tab_controller.py  view_controller.py
virtual_warehouse/data/: .#data_model.py  agent_parser.py  data_model.py  excel_parser.py  onto_manager.py  utils.py
virtual_warehouse/parser/: data_model.py  excel_parser.py  utils.py
virtual_warehouse/plugins/: item_frequencies.py  order_frequencies.py
virtual_warehouse/resources/js/: utils.js
virtual_warehouse/resources/qml/: AgentView.qml  AgentVisualizer.qml  ClassView.qml  ConnectionsMenu.qml  CustomItem.qml  Dialogs.qml  FilterMenu.qml  ItemListView.qml  LoadingOverlay.qml  LocationListView.qml  MapView2D.qml  MapView3D.qml  OrderListView.qml  main.qml
