# Project configuration
title = "Virtual Warehouse"

[owner]
name = "Břetislav Hájek"





[tool.briefcase]
project_name = "virtual_warehouse"
bundle = "com.bretahajek.virtual-warehouse"
version = "0.0.1"
url = "https://github.com/Breta01/virtual-warehouse"
license = ""
author = 'Břetislav Hájek'
author_email = "info@bretahajek.com"

[tool.briefcase.app.virtual_warehouse]
formal_name = "Virtual Warehouse"
description = "Application displaying warehouse"
icon = "virtual_warehouse/resources/images/icon"
sources = ['virtual_warehouse']
requires = [
    'PySide2==5.15.0',
    'xlrd==1.2.0',
    'Owlready2==0.29',
    'rdflib',
    'openpyxl',]


[tool.briefcase.app.virtual_warehouse.macOS]
requires = []

[tool.briefcase.app.virtual_warehouse.linux]
requires = []
system_requires = []

[tool.briefcase.app.virtual_warehouse.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.virtual_warehouse.iOS]
requires = []

[tool.briefcase.app.virtual_warehouse.android]
requires = []









[build-system]
requires = ["setuptools", "wheel"]


# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

# Update pylint as soon as possible
[tool.pylint.'MASTER']
extension-pkg-whitelist='PySide2'

[tool.pylint.'BASIC']
variable-rgx='[a-z_][a-z0-9_]{0,30}$'

[tool.pylint.'FORMAT']
max-line-length=88
