# Project configuration
title = "Virtual Warehouse"

[owner]
name = "Břetislav Hájek"

### Build using poetry ###
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "virtual-warehouse"
version = "0.2.0"
description = "Warehouse visualisation app"
authors = ["Břetislav Hájek <info@bretahajek.com>"]
readme = "README.md"
repository = "https://github.com/Breta01/virtual-warehouse"
documentation = "https://virtual-warehouse.readthedocs.io"
keywords = ["visualization", "warehouse"]
packages = [
    { include = "virtual_warehouse" },
]
include = ["virtual_warehouse/main_rc.py"]

classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
PySide2 = "5.15.0"
xlrd = "1.2.0"
Owlready2 = "0.30"
rdflib = "^5.0.0"
openpyxl = "^3.0.7"

[tool.poetry.scripts]
virtual-warehouse = "virtual_warehouse.__main__:main"


### Briefcase packaging section - EXPERIMENtAL ###
[tool.briefcase]
project_name = "virtual_warehouse"
bundle = "com.bretahajek.virtual-warehouse"
version = "0.2.0"
url = "https://github.com/Breta01/virtual-warehouse"
license = ""
author = 'Bretislav Hajek'
author_email = "info@bretahajek.com"

[tool.briefcase.app.virtual_warehouse]
formal_name = "Virtual Warehouse"
description = "Warehouse visualisation app"
icon = "virtual_warehouse/resources/images/icon"
sources = ['virtual_warehouse']
requires = [
    'PySide2==5.15.0',
    'xlrd==1.2.0',
    'Owlready2==0.29',
    'rdflib',
    'openpyxl',]


[tool.briefcase.app.virtual_warehouse.macOS]
requires = []

[tool.briefcase.app.virtual_warehouse.linux]
requires = []
system_requires = []

[tool.briefcase.app.virtual_warehouse.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.virtual_warehouse.iOS]
requires = []

[tool.briefcase.app.virtual_warehouse.android]
requires = []


### Linting and Code Style ###

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

# Update pylint as soon as possible
[tool.pylint.'MASTER']
extension-pkg-whitelist='PySide2'

[tool.pylint.'BASIC']
variable-rgx='[a-z_][a-z0-9_]{0,30}$'

[tool.pylint.'FORMAT']
max-line-length=88
